<?xml version="1.0" encoding="utf-8"?>
<no.agens.depth.lib.DepthRendrer
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<no.agens.depth.lib.DepthLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		app:custom_elevation="1dp"
		android:background="#E8E8E8"
		android:layerType="hardware"
		android:id="@+id/layout_container">

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:paddingTop="80dp"
			android:orientation="vertical">

			<ImageView
				android:layout_height="180dp"
				android:layout_width="match_parent"
				android:src="@drawable/header_s"
				android:scaleType="centerCrop"/>

		</LinearLayout>

	</no.agens.depth.lib.DepthLayout>

	<no.agens.depth.lib.DepthLayout
		android:id="@+id/ma_appBar"
		android:layout_width="match_parent"
		android:layout_height="80dp"
		android:background="?attr/colorPrimary"
		android:layerType="hardware"
		app:edge_color="?attr/colorPrimaryDark">

		<ImageView
			android:id="@+id/staturbar_bg"
			android:layout_width="match_parent"
			android:layout_height="24dp"
			android:background="?attr/colorPrimaryDark"/>

		<ImageView
			android:id="@+id/menu"
			android:layout_width="56dp"
			android:layout_height="56dp"
			android:src="@mipmap/ic_launcher"
			android:layout_alignParentBottom="true"
			android:scaleType="centerInside"
			android:paddingLeft="4dp"
			android:paddingRight="4dp"
			style="@style/SelectableItemBackgroundBorderless"/>

		<TextView
			android:id="@+id/title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:layout_marginBottom="16dp"
			android:layout_marginLeft="73dp"
			android:text="@string/fragment_name_about"
			android:fontFamily="sans-serif-medium"
			android:textColor="@color/white"
			android:textSize="18sp"/>

	</no.agens.depth.lib.DepthLayout>

	<no.agens.depth.lib.DepthLayout
		android:id="@+id/container_text"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:background="#FAFAFA"
		android:layout_marginTop="260dp"
		android:layerType="hardware"
		app:custom_elevation="1dp">

		<ScrollView
			android:layout_height="fill_parent"
			android:layout_width="fill_parent"
			android:fillViewport="true">

			<LinearLayout
				android:layout_height="match_parent"
				android:layout_width="match_parent"
				android:orientation="vertical">

				<LinearLayout
					android:id="@+id/id_contact"
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:orientation="horizontal"
					android:background="?android:attr/selectableItemBackground"
					android:paddingTop="24dp"
					android:paddingBottom="16dp"
					android:gravity="center_vertical">

					<ImageView
						android:layout_height="24dp"
						android:layout_width="24dp"
						android:src="@drawable/ic_bug_report_semi_black_24dp"
						android:layout_marginLeft="16dp"
						android:layout_marginRight="32dp"/>

					<LinearLayout
						android:layout_height="wrap_content"
						android:layout_width="match_parent"
						android:orientation="vertical"
						android:paddingRight="16dp">

						<TextView
							android:layout_height="wrap_content"
							android:layout_width="match_parent"
							android:text="@string/fragment_about_contact_title"
							android:textSize="14sp"
							android:textColor="@color/semi_black"/>

						<TextView
							android:layout_height="wrap_content"
							android:layout_width="match_parent"
							android:text="@string/fragment_about_contact_prompt"
							android:textSize="14sp"
							android:textColor="#54000000"/>

					</LinearLayout>

				</LinearLayout>

				<LinearLayout
					android:id="@+id/id_lib"
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:orientation="horizontal"
					android:background="?android:attr/selectableItemBackground"
					android:paddingTop="16dp"
					android:paddingBottom="16dp"
					android:gravity="center_vertical">

					<ImageView
						android:layout_height="24dp"
						android:layout_width="24dp"
						android:src="@drawable/ic_library_semi_black_24dp"
						android:layout_marginLeft="16dp"
						android:layout_marginRight="32dp"/>

					<LinearLayout
						android:layout_height="wrap_content"
						android:layout_width="match_parent"
						android:orientation="vertical"
						android:paddingRight="16dp">

						<TextView
							android:layout_height="wrap_content"
							android:layout_width="match_parent"
							android:text="@string/fragment_about_lib_title"
							android:textSize="14sp"
							android:textColor="@color/semi_black"/>

						<TextView
							android:layout_height="wrap_content"
							android:layout_width="match_parent"
							android:text="@string/fragment_about_lib_prompt"
							android:textSize="14sp"
							android:textColor="#54000000"/>

					</LinearLayout>

				</LinearLayout>

				<LinearLayout
					android:id="@+id/id_intro"
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:orientation="horizontal"
					android:background="?android:attr/selectableItemBackground"
					android:paddingTop="16dp"
					android:paddingBottom="16dp"
					android:gravity="center_vertical">

					<ImageView
						android:layout_height="24dp"
						android:layout_width="24dp"
						android:src="@drawable/ic_assignment_turned_in_semi_black_24dp"
						android:layout_marginLeft="16dp"
						android:layout_marginRight="32dp"/>

					<LinearLayout
						android:layout_height="wrap_content"
						android:layout_width="match_parent"
						android:orientation="vertical"
						android:paddingRight="16dp">

						<TextView
							android:layout_height="wrap_content"
							android:layout_width="match_parent"
							android:text="@string/fragment_about_intro_title"
							android:textSize="14sp"
							android:textColor="@color/semi_black"/>

						<TextView
							android:layout_height="wrap_content"
							android:layout_width="match_parent"
							android:text="@string/fragment_about_intro_prompt"
							android:textSize="14sp"
							android:textColor="#54000000"/>

					</LinearLayout>

				</LinearLayout>

				<LinearLayout
					android:id="@+id/id_update"
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:orientation="horizontal"
					android:background="?android:attr/selectableItemBackground"
					android:paddingTop="16dp"
					android:paddingBottom="16dp"
					android:gravity="center_vertical">

					<ImageView
						android:layout_height="24dp"
						android:layout_width="24dp"
						android:src="@drawable/ic_system_update"
						android:layout_marginLeft="16dp"
						android:layout_marginRight="32dp"/>

					<LinearLayout
						android:layout_height="wrap_content"
						android:layout_width="match_parent"
						android:orientation="vertical"
						android:paddingRight="16dp">

						<TextView
							android:id="@+id/id_update_title"
							android:layout_height="wrap_content"
							android:layout_width="match_parent"
							android:text="@string/fragment_about_update_title"
							android:textSize="14sp"
							android:textColor="@color/semi_black"/>

						<TextView
							android:layout_height="wrap_content"
							android:layout_width="match_parent"
							android:text="@string/fragment_about_update_prompt"
							android:textSize="14sp"
							android:textColor="#54000000"/>

					</LinearLayout>

				</LinearLayout>

			</LinearLayout>

		</ScrollView>

	</no.agens.depth.lib.DepthLayout>
	
	<ImageView
		android:id="@+id/actionbar_shadow"
		android:layout_below="@+id/ma_appBar"
		android:layout_width="match_parent"
		android:layout_height="2dp"
		android:background="@drawable/actionbar_shadow"/>

</no.agens.depth.lib.DepthRendrer>

