<no.agens.depth.lib.DepthRendrer
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<no.agens.depth.lib.DepthLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		app:custom_elevation="1dp"
		android:background="#E8E8E8"
		android:layerType="hardware"
		android:id="@+id/layout_container"/>
		
	<no.agens.depth.lib.DepthLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layerType="hardware"
		android:id="@+id/second_layout_container"
		android:layout_marginTop="80dp">
		
		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:orientation="vertical"
			android:paddingBottom="8dp"
			android:background="#FAFAFA">

			<TextView
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:text="@string/fragment_settings_data"
				android:textSize="14sp"
				android:textColor="?attr/colorAccent"
				android:paddingLeft="16dp"
				android:paddingRight="16dp"
				android:paddingTop="16dp"
				android:fontFamily="sans-serif-medium"/>

			<LinearLayout
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:orientation="vertical">

				<LinearLayout
					android:id="@+id/id_clear_cache"
					android:layout_height="wrap_content"
					android:layout_width="match_parent"
					android:orientation="horizontal"
					android:paddingTop="16dp"
					android:paddingBottom="16dp"
					android:gravity="center_vertical"
					android:background="?attr/selectableItemBackground">

					<ImageView
						android:layout_height="24dp"
						android:layout_width="24dp"
						android:src="@drawable/ic_data_usage_semi_black_24dp"
						android:layout_marginLeft="16dp"
						android:layout_marginRight="16dp"/>

					<LinearLayout
						android:layout_height="wrap_content"
						android:layout_width="match_parent"
						android:orientation="vertical"
						android:layout_marginRight="16dp"
						android:layout_marginLeft="16dp">

						<TextView
							android:layout_height="wrap_content"
							android:layout_width="match_parent"
							android:text="@string/fragment_settings_title_data"
							android:textSize="14sp"
							android:textColor="@color/semi_black"/>

						<TextView
							android:layout_height="wrap_content"
							android:layout_width="match_parent"
							android:text="@string/fragment_settings_title_data_prompt"
							android:textSize="14sp"
							android:textColor="#54000000"
							android:layout_marginTop="4dp"/>

						<TextView
							android:id="@+id/id_text_cache_size"
							android:layout_height="wrap_content"
							android:layout_width="match_parent"
							android:text="Text"
							android:layout_marginTop="8dp"
							android:gravity="left"
							android:textSize="12sp"
							android:textColor="?attr/colorAccent"
							android:fontFamily="sans-serif-medium"/>

					</LinearLayout>

				</LinearLayout>

			</LinearLayout>
			
			<TextView
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:text="@string/app_name"
				android:textSize="14sp"
				android:textColor="?attr/colorAccent"
				android:paddingLeft="16dp"
				android:paddingRight="16dp"
				android:paddingTop="16dp"
				android:fontFamily="sans-serif-medium"/>
			
			<LinearLayout
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:orientation="vertical">

				<RelativeLayout
					android:id="@+id/id_auto_update"
					android:layout_height="wrap_content"
					android:layout_width="match_parent"
					android:paddingRight="16dp"
					android:paddingLeft="16dp"
					android:paddingTop="16dp"
					android:paddingBottom="16dp"
					android:background="?attr/selectableItemBackground">

					<ImageView
						android:id="@+id/id_image_auto_update"
						android:src="@drawable/ic_system_auto_update"
						android:layout_height="24dp"
						android:layout_width="24dp"
						android:layout_marginRight="16dp"
						android:layout_centerVertical="true"/>

					<LinearLayout
						android:layout_height="wrap_content"
						android:layout_width="wrap_content"
						android:orientation="vertical"
						android:layout_toRightOf="@+id/id_image_auto_update"
						android:layout_centerVertical="true"
						android:layout_marginLeft="16dp"
						android:layout_marginRight="56dp">

						<TextView
							android:layout_height="wrap_content"
							android:layout_width="wrap_content"
							android:text="@string/fragment_settings_auto_update"
							android:textSize="14sp"
							android:textColor="@color/semi_black"/>

						<TextView
							android:layout_height="wrap_content"
							android:layout_width="wrap_content"
							android:text="@string/fragment_settings_auto_update_prompt"
							android:textSize="14sp"
							android:textColor="#54000000"/>

					</LinearLayout>

					<Switch
						android:id="@+id/id_switch_auto_update"
						android:layout_height="wrap_content"
						android:layout_width="wrap_content"
						android:layout_alignParentRight="true"
						android:layout_centerVertical="true"/>

				</RelativeLayout>

			</LinearLayout>

		</LinearLayout>

	</no.agens.depth.lib.DepthLayout>

	<no.agens.depth.lib.DepthLayout
		android:id="@+id/ma_appBar"
		android:layout_width="match_parent"
		android:layout_height="80dp"
		android:background="?android:attr/colorPrimary"
		android:layerType="hardware"
		app:edge_color="?android:attr/colorPrimaryDark">

		<ImageView
			android:id="@+id/staturbar_bg"
			android:layout_width="match_parent"
			android:layout_height="24dp"
			android:background="?android:attr/colorPrimaryDark"/>

		<ImageView
			android:id="@+id/menu"
			android:layout_width="56dp"
			android:layout_height="56dp"
			android:src="@mipmap/ic_launcher"
			android:layout_alignParentBottom="true"
			android:scaleType="centerInside"
			android:paddingLeft="4dp"
			android:paddingRight="4dp"
			style="@style/SelectableItemBackgroundBorderless"/>

		<TextView
			android:id="@+id/title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:layout_marginBottom="16dp"
			android:layout_marginLeft="73dp"
			android:text="@string/fragment_name_settings"
			android:fontFamily="sans-serif-medium"
			android:textColor="@color/white"
			android:textSize="18sp"/>

	</no.agens.depth.lib.DepthLayout>

	<ImageView
		android:id="@+id/actionbar_shadow"
		android:layout_below="@+id/ma_appBar"
		android:layout_width="match_parent"
		android:layout_height="2dp"
		android:background="@drawable/actionbar_shadow"/>

</no.agens.depth.lib.DepthRendrer>
